--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,10 @@
 name: Build and Push to Artifactory
 
-# on:
-#   push:
-#     branches: [ main ]
+on:
+  # push:
+  #  branches:
+  #    - main
+  workflow_dispatch:
 
 env:
   ARTIFACTORY_REGISTRY: tbd
@@ -13,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      actions: read
       contents: read
       attestations: write
 
@@ -20,23 +23,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Log in to JFrog Artifactory
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.ARTIFACTORY_REGISTRY }}
-        username: ${{ secrets.ARTIFACTORY_USERNAME }}
-        password: ${{ secrets.ARTIFACTORY_PASSWORD }}
+    - name: Setup JFrog CLI
+      uses: jfrog/setup-jfrog-cli@v4
+      env:
+        JF_URL: ${{ vars.JF_URL }}
+        JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Push to Artifactory
       id: build
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ env.ARTIFACTORY_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+      # TODO
 
+    
     - name: Generate provenance attestation
       uses: actions/attest-build-provenance@v2
       with:
-        subject-name: ${{ env.ARTIFACTORY_REGISTRY }}/${{ env.IMAGE_NAME }}
-        subject-digest: ${{ steps.build.outputs.digest }}
+        subject-name: ${{ steps.build.outputs.artifact_subject_name }}
+        subject-digest: sha256:${{ steps.build.outputs.artifact_digest }}
