--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,9 +2,17 @@ name: Build and Push to Artifactory
 
 on:
   # push:
-  #  branches:
-  #    - main
+  #   branches:
+  #     - main
   workflow_dispatch:
+
+env:
+  OIDC_PROVIDER_NAME: swampup-2025/testing-githubcentral-jpd-public@github
+  JF_URL: ${{ vars.JF_URL }}
+  JF_REGISTRY: ${{ vars.JF_REGISTRY }}
+  JF_DOCKER_REPO: dev-docker-local
+  IMAGE_NAME: octo-billing
+  BUILD_NAME: octo-billing-build
 
 jobs:
   build:
@@ -20,18 +28,30 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup JFrog CLI
+      id: jfrog-setup
       uses: jfrog/setup-jfrog-cli@v4
-      env:
-        JF_URL: ${{ vars.JF_URL }}
-        JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+      with:
+        oidc-provider-name: ${{ env.OIDC_PROVIDER_NAME }}
 
-    - name: Push to Artifactory
+    - name: Log in to JFrog Artifactory
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.JF_URL }}
+        username: ${{ steps.jfrog-setup.outputs.oidc-user }}
+        password: ${{ steps.jfrog-setup.outputs.oidc-token }}
+
+    - name: Build and Push to Artifactory
+      if: false
       id: build
-      # TODO
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: ${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
 
     
     - name: Generate provenance attestation
       uses: actions/attest-build-provenance@v2
       with:
-        subject-name: ${{ steps.build.outputs.artifact_subject_name }}
-        subject-digest: sha256:${{ steps.build.outputs.artifact_digest }}
+        subject-name: octo-billing
+        subject-digest: ${{ steps.build.outputs.digest }}
