--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ejs": "2.5.7",
     "multer": "1.3.0",
     "jwt-simple": "0.5.1",
-    "bcrypt": "3.0.0",
+    "crypto-js": "3.1.2",
     "cookie-parser": "1.4.3",
     "body-parser": "1.18.2",
     "helmet": "3.12.0",
@@ -36,7 +36,18 @@
     "fresh": "0.5.2",
     "send": "0.16.1",
     "serve-static": "1.13.1",
-    "ws": "6.1.0"
+    "ws": "6.1.0",
+    "underscore": "1.8.3",
+    "yargs-parser": "5.0.0",
+    "bootstrap": "3.3.7",
+    "jquery": "2.2.4",
+    "node-forge": "0.7.0",
+    "xml2js": "0.4.17",
+    "shelljs": "0.7.8",
+    "uglify-js": "2.8.29",
+    "hoek": "4.2.0",
+    "growl": "1.9.2",
+    "nconf": "0.8.5"
   },
   "devDependencies": {
     "nodemon": "1.18.4",
