--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,7 +36,7 @@ jobs:
         JF_URL: ${{ env.JF_URL }}
       with:
         version: 2.78.5
-        oidc-provider-name: ${{ vars.OIDC_PROVIDER_NAME }}
+        oidc-provider-name: ${{ env.OIDC_PROVIDER_NAME }}
         custom-server-id: github-actions
       
     - name: Docker login
