Refactor build-and-test workflow: comment out fetch-depth and enhance summary output with detailed package information

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,8 +26,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
-      with:
-        fetch-depth: 0  # Required for provenance generation
+      # with:
+        # fetch-depth: 0  # Required for provenance generation
 
     - name: Install JFrog CLI
       id: setup-jfrog-cli
@@ -75,5 +75,11 @@ jobs:
     - name: Build Summary
       run: |
         PACKAGE_NAME='${{ env.IMAGE_NAME }}/${{ github.run_number }}'
-        PACKAGE_LINK='${{ env.JF_URL }}/ui/packages/docker:%2F%2F${PACKAGE_NAME}'
-        echo 'Package ['${PACKAGE_NAME}']('${PACKAGE_LINK}') created' >> $GITHUB_STEP_SUMMARY
+        FULL_IMAGE_TAG='${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}'
+        PACKAGE_LINK='${{ env.JF_URL }}/ui/packages/docker:%2F%2F${{ env.JF_DOCKER_REPO }}%2F${PACKAGE_NAME}'
+        echo '## 🐳 Docker Package Created' >> $GITHUB_STEP_SUMMARY
+        echo '- **Package**: `${PACKAGE_NAME}`' >> $GITHUB_STEP_SUMMARY
+        echo '- **Full Tag**: `${FULL_IMAGE_TAG}`' >> $GITHUB_STEP_SUMMARY
+        echo '- **Registry**: `${{ env.JF_REGISTRY }}`' >> $GITHUB_STEP_SUMMARY
+        echo '- **Repository**: `${{ env.JF_DOCKER_REPO }}`' >> $GITHUB_STEP_SUMMARY
+        echo "- **View**: [Open in JFrog](${PACKAGE_LINK})" >> $GITHUB_STEP_SUMMARY
