--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -78,8 +78,8 @@ jobs:
         pkgLink="${{ env.JF_URL }}/ui/packages/docker:%2F%2F${pkgName}"
         fullImgTag="${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}"
         echo "## 🐳 Docker Package Created" >> $GITHUB_STEP_SUMMARY
-        echo "- **Package**: `${pkgName}`" >> $GITHUB_STEP_SUMMARY
-        echo "- **Full Tag**: `${fullImgTag}`" >> $GITHUB_STEP_SUMMARY
-        echo "- **Registry**: `${{ env.JF_REGISTRY }}`" >> $GITHUB_STEP_SUMMARY
-        echo "- **Repository**: `${{ env.JF_DOCKER_REPO }}`" >> $GITHUB_STEP_SUMMARY
+        echo "- **Package**: ${pkgName}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Full Tag**: ${fullImgTag}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Registry**: ${{ env.JF_REGISTRY }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Repository**: ${{ env.JF_DOCKER_REPO }}`" >> $GITHUB_STEP_SUMMARY
         echo "- **View**: [Open in JFrog]($pkgLink)" >> $GITHUB_STEP_SUMMARY
