--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,12 @@ Thumbs.db
 # Logs
 logs
 *.log
+
+# Test artifacts
+integration-test-report.json
+reports/
+coverage/integration/
+*.xml
+
+# Docker test images
+octo-billing:test
