--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "test:integration": "jest --config jest.integration.config.js",
-    "test:integration:report": "jest --config jest.integration.config.js --json --outputFile=integration-test-report.json"
+    "test": "jest"
   },
   "dependencies": {
     "express": "4.16.0",
@@ -53,12 +51,7 @@
   },
   "devDependencies": {
     "nodemon": "1.18.4",
-    "jest": "23.6.0",
-    "@testcontainers/core": "^3.7.0",
-    "@testcontainers/node": "^1.0.0",
-    "supertest": "^6.3.3",
-    "axios": "^1.6.0",
-    "jest-junit": "^16.0.0"
+    "jest": "23.6.0"
   },
   "keywords": [
     "billing",
