--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:it": "jest --runInBand --testMatch '<rootDir>/itest/**/*.test.js'",
+    "test:it:json": "bash -lc 'mkdir -p coverage/integration && jest --runInBand --testMatch \"<rootDir>/itest/**/*.test.js\" --json --outputFile=coverage/integration/itest-report.json'"
   },
   "dependencies": {
     "express": "4.16.0",
@@ -51,7 +53,9 @@
   },
   "devDependencies": {
     "nodemon": "1.18.4",
-    "jest": "23.6.0"
+    "jest": "23.6.0",
+    "supertest": "3.4.2",
+    "testcontainers": "9.12.0"
   },
   "keywords": [
     "billing",
