Refactor integration testing workflow: consolidate steps and update report handling
- Removed the legacy itest.yml workflow file.
- Enhanced the build-and-test.yml workflow by integrating setup, dependency installation, and Docker image building for integration tests.
- Updated the integration tests report path in the attestation step to ensure accurate reporting.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -64,13 +64,27 @@ jobs:
         subject-name: oci://${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
 
-    # - name: Attest integration tests report
-    #   uses: actions/attest@v2
-    #   with:
-    #     subject-name: oci://${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}
-    #     subject-digest: ${{ steps.build-and-push.outputs.digest }}
-    #     predicate-type: 'https://jfrog.com/security/attestation/itests-report/v1'
-    #     predicate: 'itests-report.json'
+    - name: Setup Node.js 16
+      uses: actions/setup-node@v4
+      with:
+        node-version: 16
+
+    - name: Install dependencies
+      run: npm ci || npm i
+
+    - name: Build Docker image for itests
+      run: docker build -t octo-billing:${{ github.run_number }} .
+
+    - name: Run integration tests (JSON)
+      run: npm run test:it:json        
+   
+    - name: Attest integration tests report
+      uses: actions/attest@v2
+      with:
+        subject-name: oci://${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+        predicate-type: 'https://jfrog.com/security/attestation/itests-report/v1'
+        predicate: 'coverage/integration/itest-report.json'
 
     - name: Build Summary
       run: |
