--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -72,11 +72,10 @@ jobs:
     - name: Install dependencies
       run: npm ci || npm i
 
-    - name: Build Docker image for itests
-      run: docker build -t octo-billing:${{ github.run_number }} .
-
     - name: Run integration tests (JSON)
-      run: npm run test:it:json        
+      env:
+        IMAGE_NAME: octo-billing:${{ github.run_number }}
+      run: npm run test:it:json
    
     - name: Attest integration tests report
       uses: actions/attest@v2
