Update integration test workflow to use JF_REGISTRY for Docker image name
- Modified the IMAGE_NAME environment variable to include JF_REGISTRY, allowing for a more flexible and dynamic Docker image naming convention during integration tests.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Run integration tests (JSON)
       env:
-        IMAGE_NAME: octo-billing:${{ github.run_number }}
+        IMAGE_NAME: ${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
       run: npm run test:it:json
    
     - name: Attest integration tests report
