--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -83,7 +83,7 @@ jobs:
         subject-name: oci://${{ env.JF_REGISTRY }}/${{ env.IMAGE_NAME }}
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
         predicate-type: 'https://jfrog.com/security/attestation/itests-report/v1'
-        predicate: 'coverage/integration/itest-report.json'
+        predicate-path: 'coverage/integration/itest-report.json'
 
     - name: Build Summary
       run: |
