Update promote-to-prod workflow to use self-hosted runner and enhance permissions
- Changed the runner from 'ubuntu-latest' to 'self-hosted' for better control over the environment.
- Added permissions for contents, packages, attestations, and id-token to support enhanced functionality and security during the promotion process.

--- a/.github/workflows/promote-to-prod.yml
+++ b/.github/workflows/promote-to-prod.yml
@@ -21,7 +21,12 @@ env:
 
 jobs:
   promote-to-production:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    permissions:
+        contents: read
+        packages: write
+        attestations: write  # Required for attestation
+        id-token: write      # Added for OIDC token access
     
     steps:
       - name: Checkout code
