Enhance promote-to-prod workflow by updating the provenance verification step to include specific image details and adding a completion message. Removed commented-out security validation and promotion steps for clarity.

--- a/.github/workflows/promote-to-prod.yml
+++ b/.github/workflows/promote-to-prod.yml
@@ -43,109 +43,18 @@ jobs:
           oidc-provider-name: ${{ env.OIDC_PROVIDER_NAME }}
           custom-server-id: github-actions
 
-      - name: Verify Provenance
+      - name: Verify Provenance and Test Results
         run: |
           echo "## Attestation Verification" >> $GITHUB_STEP_SUMMARY
-          echo "Verifying provenance and test results..." >> $GITHUB_STEP_SUMMARY
+          echo "Verifying provenance and test results for ${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-version }}..." >> $GITHUB_STEP_SUMMARY
           jf evd verify --package-repo-name ${{ env.JF_DOCKER_REPO }} \
           --package-name ${{ github.event.inputs.image-name }} \
           --package-version ${{ github.event.inputs.image-version }} >> $GITHUB_STEP_SUMMARY
+          echo "✅ Provenance and test results verification completed" >> $GITHUB_STEP_SUMMARY
 
       - name: Promote Docker Image to Production Repository
         run: |
           echo "## Docker Image Promotion" >> $GITHUB_STEP_SUMMARY
           echo "Promoting Docker image to production repository..." >> $GITHUB_STEP_SUMMARY
           jf rt docker-promote  ${{ github.event.inputs.image-name }}/${{ github.event.inputs.image-version }} ${{ env.JF_DOCKER_REPO }} ${{ env.JF_PROD_DOCKER_REPO }} >> $GITHUB_STEP_SUMMARY
-
-      # - name: Security Validation
-      #   run: |
-      #     echo "Running security validation..."
-      #     # Perform additional security checks before promotion
-      #     # This could include vulnerability scanning, policy checks, etc.
-          
-      #     # Example: Check for critical vulnerabilities
-      #     echo "Checking for critical vulnerabilities..."
-      #     # jf xr curl -XGET "/api/v1/scan/artifacts" -d '{"component_id": "'$DOCKER_IMAGE_NAME:${{ github.event.inputs.version }}'"}'
-          
-      #     echo "✅ Security validation passed"
-
-      # - name: Copy Docker Image to Production Repository
-      #   run: |
-      #     echo "Copying Docker image to production repository..."
-      #     # Copy the Docker image to the repository assigned to the Prod environment
-      #     jf rt copy ${{ secrets.JFROG_DOCKER_REPO }}/$DOCKER_IMAGE_NAME/${{ github.event.inputs.version }} \
-      #       ${{ secrets.JFROG_PROD_DOCKER_REPO }}/$DOCKER_IMAGE_NAME/${{ github.event.inputs.version }} \
-      #       --flat=false
-          
-      #     # Also copy the latest tag
-      #     jf rt copy ${{ secrets.JFROG_DOCKER_REPO }}/$DOCKER_IMAGE_NAME/latest \
-      #       ${{ secrets.JFROG_PROD_DOCKER_REPO }}/$DOCKER_IMAGE_NAME/latest \
-      #       --flat=false
-          
-      #     echo "✅ Docker image copied to production repository"
-
-      # - name: Promote Application Version
-      #   run: |
-      #     echo "Promoting application version to production..."
-      #     # Promote the application version to the production environment
-      #     # This updates the application's deployment status
-          
-      #     jf xr curl -XPOST "/api/v1/applications/demo-app/versions/${{ github.event.inputs.version }}/environments" \
-      #       -H "Content-Type: application/json" \
-      #       -d '{
-      #         "environment": "'${{ github.event.inputs.environment }}'",
-      #         "description": "Promoted to production via GitHub Actions",
-      #         "promoted_by": "'${{ github.actor }}'",
-      #         "promotion_date": "'$(date -u +"%Y-%m-%dT%H:%M:%SZ")'"
-      #       }'
-          
-      #     echo "✅ Application version promoted to production"
-
-      # - name: Notify GitHub of Production Deployment
-      #   run: |
-      #     echo "Notifying GitHub of production deployment..."
-      #     # Send notification back to GitHub about the production deployment
-      #     # This enables the filtering of Dependabot alerts for production artifacts
-          
-      #     # Create a deployment status
-      #     curl -X POST \
-      #       -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-      #       -H "Accept: application/vnd.github.v3+json" \
-      #       https://api.github.com/repos/${{ github.repository }}/deployments \
-      #       -d '{
-      #         "ref": "'${{ github.event.inputs.version }}'",
-      #         "environment": "'${{ github.event.inputs.environment }}'",
-      #         "description": "Deployed to JFrog production environment",
-      #         "auto_merge": false,
-      #         "required_contexts": []
-      #       }'
-          
-      #     echo "✅ GitHub notified of production deployment"
-
-      # - name: Update Dependabot Alert Filtering
-      #   run: |
-      #     echo "Updating Dependabot alert filtering..."
-      #     # This step ensures that Dependabot alerts can be filtered
-      #     # to show only alerts relevant to the production deployment
-          
-      #     echo "Production deployment completed for version: ${{ github.event.inputs.version }}"
-      #     echo "Dependabot alerts can now be filtered using: package-registry:jfrog-artifactory"
-
-      # - name: Summary
-      #   run: |
-      #     echo "## 🚀 Production Promotion Complete!" >> $GITHUB_STEP_SUMMARY
-      #     echo "" >> $GITHUB_STEP_SUMMARY
-      #     echo "**Version Promoted:** ${{ github.event.inputs.version }}" >> $GITHUB_STEP_SUMMARY
-      #     echo "**Environment:** ${{ github.event.inputs.environment }}" >> $GITHUB_STEP_SUMMARY
-      #     echo "**Promoted By:** ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
-      #     echo "**Production Repository:** ${{ secrets.JFROG_PROD_DOCKER_REPO }}" >> $GITHUB_STEP_SUMMARY
-      #     echo "" >> $GITHUB_STEP_SUMMARY
-      #     echo "✅ Provenance verified" >> $GITHUB_STEP_SUMMARY
-      #     echo "✅ Security validation passed" >> $GITHUB_STEP_SUMMARY
-      #     echo "✅ Docker image copied to production" >> $GITHUB_STEP_SUMMARY
-      #     echo "✅ Application version promoted" >> $GITHUB_STEP_SUMMARY
-      #     echo "✅ GitHub notified of deployment" >> $GITHUB_STEP_SUMMARY
-      #     echo "" >> $GITHUB_STEP_SUMMARY
-      #     echo "**Next Steps:**" >> $GITHUB_STEP_SUMMARY
-      #     echo "- Filter Dependabot alerts using: \`package-registry:jfrog-artifactory\`" >> $GITHUB_STEP_SUMMARY
-      #     echo "- Monitor production deployment in JFrog Platform" >> $GITHUB_STEP_SUMMARY
+        
