--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build-test-deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
         contents: read
         packages: write
@@ -33,9 +33,8 @@ jobs:
       env:
         JF_URL: ${{ env.JF_URL }}
       with:
-        version: 2.78.5
+        version: 2.78.8
         oidc-provider-name: ${{ env.OIDC_PROVIDER_NAME }}
-        custom-server-id: github-actions
       
     - name: Docker login
       uses: docker/login-action@v3
