--- a/package.json
+++ b/package.json
@@ -9,56 +9,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "4.16.0",
-    "lodash": "4.17.4",
-    "moment": "2.19.3",
-    "mongoose": "5.0.0",
-    "request": "2.88.0",
-    "handlebars": "4.0.12",
-    "ejs": "2.5.7",
-    "multer": "1.3.0",
-    "jwt-simple": "0.5.1",
-    "crypto-js": "3.1.2",
-    "cookie-parser": "1.4.3",
-    "body-parser": "1.18.2",
-    "helmet": "3.12.0",
-    "cors": "2.8.4",
-    "dotenv": "6.0.0",
-    "axios": "0.18.0",
-    "cheerio": "1.0.0-rc.2",
-    "validator": "10.8.0",
-    "jsonwebtoken": "8.3.0",
-    "marked": "0.5.0",
-    "serialize-javascript": "1.5.0",
-    "tar": "4.4.6",
-    "minimist": "1.2.0",
-    "debug": "2.6.9",
-    "fresh": "0.5.2",
-    "send": "0.16.1",
-    "serve-static": "1.13.1",
-    "ws": "6.1.0",
-    "underscore": "1.8.3",
-    "yargs-parser": "5.0.0",
-    "bootstrap": "3.3.7",
-    "jquery": "2.2.4",
-    "node-forge": "0.7.0",
-    "xml2js": "0.4.17",
-    "shelljs": "0.7.8",
-    "uglify-js": "2.8.29",
-    "hoek": "4.2.0",
-    "growl": "1.9.2",
-    "nconf": "0.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "1.18.4",
-    "jest": "23.6.0"
-  },
-  "keywords": [
-    "billing",
-    "demo",
-    "vulnerable",
-    "security-testing"
-  ],
-  "author": "Demo Author",
-  "license": "MIT"
+    "express": "^4.18.2",
+    "ejs": "^3.1.9",
+    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "jsonwebtoken": "^9.0.2",
+    "crypto-js": "^4.1.1",
+    "handlebars": "^4.7.8"
+  }
 }
