--- a/package.json
+++ b/package.json
@@ -18,22 +18,19 @@
     "crypto-js": "3.1.2",
     "ejs": "2.5.7",
     "express": "4.16.0",
-    "handlebars": "4.0.12",
     "helmet": "3.12.0",
-    "jsonwebtoken": "8.3.0",
-    "lodash": "4.17.4",
-    "moment": "2.19.3",
-    "minimist": "1.2.0",
-    "debug": "2.6.9",
-    "marked": "0.5.0",
-    "serialize-javascript": "1.5.0",
-    "tar": "4.4.6",
-    "ws": "6.1.0",
-    "underscore": "1.8.3",
-    "yargs-parser": "5.0.0"
+  "lodash": "4.17.4",
+  "moment": "2.19.3",
+  "minimist": "1.2.0",
+  "debug": "2.6.9",
+  "tar": "4.4.6",
+  "ws": "6.1.0",
+  "underscore": "1.8.3",
+  "jsonwebtoken": "8.3.0",
+  "handlebars": "4.0.12"
   },
   "devDependencies": {
     "jest": "^30.1.3",
-    "testcontainers": "^11.5.1"
+  "testcontainers": "^11.5.1"
   }
 }
