--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "underscore": "1.8.3",
   "jsonwebtoken": "8.3.0",
   "handlebars": "4.0.12"
+  ,
+  "supertest": "^6.3.3"
   },
   "devDependencies": {
     "jest": "^30.1.3",
-  "testcontainers": "^11.5.1"
+  "testcontainers": "8.10.1"
   }
 }
